--- a/myApp/package.json
+++ b/myApp/package.json
@@ -24,6 +24,7 @@
     "@ionic/storage": "2.0.1",
     "ionic-angular": "3.0.1",
     "ionicons": "3.0.0",
+    "node-sass": "^4.5.3",
     "rxjs": "5.1.1",
     "sw-toolbox": "3.4.0",
     "ts-md5": "^1.2.0",
